# origin

./: .gitignore  AnimationMixer.h  AssetBaking.h  CMakeLists.txt  CharacterEditor.h  CharacterPhysics.h  FBXStateMachine.cpp  FBXStateMachine.h  README.md  SkinnedRenderer.h  build_wasm.sh  main.cpp  main_editor.cpp  main_runtime.cpp
assets/: soldier.asset.json
build_wasm_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  runtime_player.html  runtime_player.js
